[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/blob.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/wall.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/exit.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/level_chooser.gd" type="Script" id=4]
[ext_resource path="res://scenes/exitwithoutfullscreen.gd" type="Script" id=5]
[ext_resource path="res://scenes/pause.tscn" type="PackedScene" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="Sprite2" parent="." instance=ExtResource( 2 )]
position = Vector2( 702.75, 547.25 )
scale = Vector2( 0.238525, 39.5 )

[node name="Sprite3" parent="." instance=ExtResource( 2 )]
position = Vector2( 824, 547.75 )
scale = Vector2( 0.0859375, 40.5 )

[node name="ExitArea" parent="." instance=ExtResource( 3 )]
position = Vector2( 189, 684 )
script = ExtResource( 5 )
target = "level1"

[node name="blob" parent="." instance=ExtResource( 1 )]
position = Vector2( 55, -19 )

[node name="Sprite" parent="." instance=ExtResource( 2 )]
position = Vector2( 592.5, -194.5 )
scale = Vector2( 0.494629, 445 )

[node name="Sprite6" parent="." instance=ExtResource( 2 )]
position = Vector2( 350.5, 560 )
scale = Vector2( 0.121582, 178 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
show_behind_parent = true
margin_left = 168.0
margin_top = 511.0
margin_right = 218.0
margin_bottom = 532.0
text = "world 1"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
show_behind_parent = true
margin_left = 492.0
margin_top = 510.0
margin_right = 577.0
margin_bottom = 585.0
text = "world 2"

[node name="ExitArea5" parent="." instance=ExtResource( 3 )]
position = Vector2( 518, 673 )
script = ExtResource( 5 )
target = "level8"

[node name="ExitArea6" parent="." instance=ExtResource( 3 )]
position = Vector2( 832, 720 )
scale = Vector2( 1, 2 )
target = "level15"

[node name="Sprite13" parent="." instance=ExtResource( 2 )]
position = Vector2( -136, 50.5 )
scale = Vector2( 0.158203, 717 )

[node name="Sprite15" parent="." instance=ExtResource( 2 )]
position = Vector2( 1052, 191.5 )
scale = Vector2( 0.0595703, 473 )

[node name="RichTextLabel9" type="RichTextLabel" parent="."]
show_behind_parent = true
margin_left = 961.0
margin_top = 448.0
margin_right = 1021.0
margin_bottom = 478.0
text = "tuturial
"

[node name="ExitArea10" parent="." instance=ExtResource( 3 )]
position = Vector2( 1105, 459 )
script = ExtResource( 5 )
target = "tutorial"

[node name="Sprite16" parent="." instance=ExtResource( 2 )]
position = Vector2( 48, 560 )
scale = Vector2( 0.107422, 178 )

[node name="Sprite7" parent="." instance=ExtResource( 2 )]
position = Vector2( 987.5, 560 )
scale = Vector2( 0.105957, 178 )

[node name="Sprite8" parent="." instance=ExtResource( 2 )]
position = Vector2( 674.5, 560 )
scale = Vector2( 0.108887, 178 )

[node name="RichTextLabel3" type="RichTextLabel" parent="."]
show_behind_parent = true
margin_left = 809.0
margin_top = 504.0
margin_right = 894.0
margin_bottom = 585.0
text = "world 3
"

[node name="Pause Control" parent="." instance=ExtResource( 6 )]

[node name="Sprite14" parent="." instance=ExtResource( 2 )]
position = Vector2( -23, 175 )
scale = Vector2( 0.0327148, 717 )

[node name="RichTextLabel5" type="RichTextLabel" parent="."]
show_behind_parent = true
margin_left = 26.0
margin_top = 422.0
margin_right = 101.0
margin_bottom = 454.0
rect_scale = Vector2( 2, 2 )
custom_colors/default_color = Color( 0, 1, 0.913725, 1 )
text = "finale
"

[node name="ExitArea2" parent="." instance=ExtResource( 3 )]
position = Vector2( -68, 440 )
script = ExtResource( 5 )
target = "finale"
